--- a/plants.html
+++ b/plants.html
@@ -38,14 +38,17 @@
                           <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item px-3">
-                          <a class="nav-link" href="plants.html">Plants</a>
+                          <a class="nav-link active" aria-current="page" href="#">Plants</a>
                         </li>
                         <li class="nav-item px-3">
                           <a class="nav-link disabled">Gifts</a>
                         </li>
                         <li class="nav-item px-3">
-                          <a class="nav-link active" aria-current="page" href="#">About Us</a>
-                        </li>
+                            <a class="nav-link disabled">Sale</a>
+                          </li>
+                          <li class="nav-item px-3">
+                            <a class="nav-link disabled">Subscriptions</a>
+                          </li>
                     </ul>
                     <form class="d-flex">
                         <input class="form-control-sm me-2" type="search" id="search" placeholder="Search" aria-label="Search">
@@ -55,36 +58,44 @@
             </div>
         </nav>
 
+        <!--card content-->
         <div class="container">
-            <div class="row">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <h1>A Little About Us</h1>
-                </div>
-            </div>
-            <div class="card mb-3">
-                <div class="row">
-                    <div class="col-4">
-                        <img class="w-100 rounded" src="img/daniel-oberg-sEApBUS4fIk-unsplash.jpg" alt="seedlings-photo by Daniel Oberg">
-                    </div>
-                    <div class="col-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Nonsense</h5>
-                            <p class="card-text">blah blah blah</p>
-                        </div>
+                <div class="card h-100">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                 </div>
-            </div>
-            <div class="card mb-3">
-                <div class="row">
-                    <div class="col-8">
-                        <div class="card-body">
-                            <h5>header for more nonsense</h5>
-                            <p class="card-text">blah blah blah</p>
-                        </div>
+                </div>
+                <div class="col">
+                <div class="card h-100">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a short card.</p>
                     </div>
-                    <div class="col-4">
-                            <img class="w-100 rounded" src="img/daniel-oberg-sEApBUS4fIk-unsplash.jpg">
+                </div>
+                </div>
+                <div class="col">
+                <div class="card h-100">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                     </div>
+                </div>
+                </div>
+                <div class="col">
+                <div class="card h-100">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
