--- a/index.html
+++ b/index.html
@@ -1,102 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
         <!-- Additional CSS must be placed after Bootstrap CSS -->
-        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
         <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bad+Script" />
         <link rel="stylesheet" href="css/styles.css" />
 
         <title>Flora</title>
     </head>
-    <body class="bg-warning">
+    <body>
         <header class="jumbotron">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h1 class="display-3">flora in cute font</h1>
+                        <a href="index.html" role="button"><h1 class="display-3">flora</h1></a>
                     </div>
                 </div>
             </div>
         </header>
 
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div id="featuredPlants" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="img/annie-spratt-ncQ2sguVlgo-unsplash.jpg" class="d-block w-100 img-resize img-fluid" alt="Succulents-Photo by Annie Spratt">
-                                <div class="carousel-caption d-none d-md-block">
-                                <h5>Succulents</h5>
-                                <p>Hardly thirsty</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/gaelle-marcel-yO9ZVNFbpao-unsplash.jpg" class="d-block w-100 img-resize img-fluid" alt="Cactus-Photo by Gaelle Marcel">
-                                <div class="carousel-caption d-none d-md-block">
-                                <h5>Practically Unkillable</h5>
-                                <p>Prickly and cute</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/kelsey-brown-S_J4FRUo5ZQ-unsplash.jpg" class="d-block w-100 img-resize img-fluid" alt="Pothos in gold pot-Photo by Kelsey Brown">
-                                <div class="carousel-caption d-none d-md-block">
-                                <h5>Bring Life to Any Room</h5>
-                                <p>Add color with the Pothos plant</p>
-                            </div>
-                        </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#featuredPlants" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#featuredPlants" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                        </button>
+        <nav class="navbar navbar-light bg-light navbar-expand-sm">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><i class="fa-brands fa-pagelines fa-2x" aria-hidden="true"></i></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#floraNav" aria-controls="floraNav" aria-expanded="false" aria-label="toggle-navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="floraNav">
+                    <ul class="navbar-nav me-auto m-auto mb-2 ">
+                        <li class="nav-item px-3">
+                          <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item px-3">
+                          <a class="nav-link" href="plants.html">Plants</a>
+                        </li>
+                        <li class="nav-item px-3">
+                          <a class="nav-link disabled">Gifts</a>
+                        </li>
+                        <li class="nav-item px-3">
+                          <a class="nav-link" href="aboutus.html">About Us</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control-sm me-2" type="search" id="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+
+        <div id="featuredPlants" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#featuredPlants" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/annie-spratt-ncQ2sguVlgo-unsplash.jpg" class="d-block w-100 img-resize img-fluid"alt="Succulents-Photo by Annie Spratt">
+                    <div class="carousel-caption d-none d-md-block m-auto">
+                    <h5>Succulents</h5>
+                    <p>Hardly thirsty</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/gaelle-marcel-yO9ZVNFbpao-unsplash.jpg" class="d-block w-100 img-resize img-fluid" alt="Cactus-Photo by Gaelle Marcel">
+                    <div class="carousel-caption d-none d-md-block m-auto">
+                    <h5>Practically Unkillable</h5>
+                    <p>Prickly and cute</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/kelsey-brown-S_J4FRUo5ZQ-unsplash.jpg" class="d-block w-100 img-resize img-fluid" alt="Pothos in gold pot-Photo by Kelsey Brown">
+                    <div class="carousel-caption d-none d-md-block m-auto">
+                    <h5>Bring Life to Any Room</h5>
+                    <p>Add color with the Pothos plant</p>
+                </div>
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#featuredPlants" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#featuredPlants" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4 offset-sm-4 ml-auto">
+                        <ul class="list-unstyled">
+                            <li><a href="aboutus.html" class="text-white">about us</a></li>
+                            <li><a href="https://www.nrdc.org/" class="text-white">NRDC</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-2 offset-sm-2">
+                        <a role="button" class="btn" href="http://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a role="button" class="btn" href="http://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a role="button" class="btn" href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                        <a role="button" class="btn" href="http://tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <p>Top Sellers</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <p>cards of image with pricing. possibly 3 or 4</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
+        </footer>
 
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <p>Sign up for newsletter banner</p>
-                </div>
-             </div>
-        </div>
-    </body>
         <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    </body>
 </html>
